Im fixing now some resolution problems on mobile

--- a/src/components/Chess.css
+++ b/src/components/Chess.css
@@ -87,5 +87,10 @@
     border: 3px solid #252525;
     height: 350px;
     width: 350px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 10%;
+    margin-block-end: 10px;
 }
 }
